--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,6 +3,6 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
+<p>test</</p>
 <p>Use this area to provide additional information.</p>
 <p> test </p>
